- fixed text not visible on selection of text on certain themes

--- a/root.css
+++ b/root.css
@@ -150,7 +150,7 @@ html, body {
 }
 
 ::selection {
-	background-color: var(--highlighter);
+	background-color: var(--text-color);
 	color: var(--bg-color);
 }
 
